--- a/used.html
+++ b/used.html
@@ -2153,7 +2153,7 @@ span {
 
 <title>デジタル優先券 | LiSA「LiVE is Smile Always〜PATCH WALK〜」 | ICCOMOTTO</title>
 <script type="text/javascript" async="" src="./analytics.js" class="optanon-category-C0002-C0004 "></script></head>
-<body class="artist_top dgticket"><div class="wrapper myartist rainbow_bg"><header id="header" role="banner">
+<body class="artist_top dgticket"><div class="wrapper myartist"><header id="header" role="banner">
   <div class="header close">
     <div class="header__wrapper">
       <div class="header__title">
